Fix subscribe-cta success message not visible color

--- a/css/main.sass
+++ b/css/main.sass
@@ -550,6 +550,8 @@ body
     &:hover
       background-color: #16548E
       cursor: pointer
+  #subscribe-confirmation
+    color: #eee
 
 
 .bottom-closer
